# dinfo

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml
src/: analyzer.rs  cli.rs  formatter.rs  main.rs  utils.rs
tests/: integration_tests.rs
